--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="Assets/Stylesheets/T-T-T Game.css">
+    <link rel="stylesheet" href="assets/stylesheets/t-t-t Game.css">
 </head>
 <body>
 
@@ -16,11 +16,11 @@
         <div class=" container mt-5 input-container">
             <div class="input1 my-3">
                 <input type="text" class="form-control" id="playerOneName" placeholder="Enter Player One name">
-                <img src="Assets/images/crs.png" alt="cross-symbol" width="40" >
+                <img src="assets/images/crs.png" alt="cross-symbol" width="40" >
             </div>
             <div class="input2 my-3">
                 <input type="text" class="form-control" id="playerTwoName" placeholder="Enter player Two Name">
-                <img src="Assets/images/nought.png" alt="circle-symbol" width="40" >
+                <img src="assets/images/nought.png" alt="circle-symbol" width="40" >
             </div>
             
         </div>
