--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     </main>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="Assets/Scripts/T-T-T Game.js"></script>
+    <script src="assets/scripts/t-t-t Game.js"></script>
 </body>
 </html>
